# theroad2

./: .gitignore  README.md  Rodrigues.cpp  klaman.m  untitled.slx.r2016a  untitled2121.slx  xuanjia.slx  xuanjia.slx.r2016a
ARUCO/: ARUCO.kdev4  CMakeLists.txt  main.cpp
Calibration/: Calib_Results.m  Calib_Results.mat  calib_data.mat  draw.py  getcanshu.py  getcorners.py  homography.py  homography1.py  main.py  num.py
arcuo/: ogre-test-0.0.1.tgz
ceres/: main.cpp  main.h
charuco/: charuco.kdev4  main.cpp
chuankou/: test1.py  test2.py
detcharuco/: .main.cpp.swp  CMakeLists.txt  detcharuco.kdev4  main.cpp
edge_boxes/: edge_detection.py
face/: face.py
haar+adaboost/: adaboost.py  face.py  for.py  jifen.py  main.py  nface.py  result.txt  test.py  train2.py  train3.py  traincascade.py
hog+svm/: .hog.py.un~  ganzhiji.py  hog.py  hog.py~  logistic.py  nface2.py  plot3d.py  rbf.py  read.py  test.py  winnow.py
matplot/: 3Dplot.py
opencvsanjiao/: huayuan.py  testcolor.py  tuoyuan.py  yuanquan.py  zhengfangxing.py  zhixian.py
opnencv/: image.py
pcl/: CMakeLists.txt  pcl.kdev4
pcl_test/: CMakeLists.txt  main.cpp  pcl_test.kdev4
pcl_test/.kdev4/: pcl_test.kdev4
pnp2/: CMakeLists.txt  main.cpp  pnp2.kdev4
python/: test.py  test2.py
robot/: matlab_input.m  myikine.m  qianquJ.m  robot1.slx  robot2.slx  test1.m
surf/: 001.txt  Asurf01.cpp  Asurf02.cpp  Azkaze.cpp  Azkaze02.cpp  Find01.cpp  Find02.cpp  Find03.cpp  Find05.cpp  Find06.cpp  H.cpp  main03.cpp  mysurf.cpp  surf02.cpp  surfclass.cpp  surfclass.h
test/: test.cbp
viz/: CMakeLists.txt  (+1 more)
(+597 files in other folders)
